// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`created bundle for react-native-gesture-handler 1`] = `
{
  "files": {
    "android": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
          "react/jsx-runtime",
        ],
        "size": 51000,
      },
    },
    "ios": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
          "react/jsx-runtime",
        ],
        "size": 51000,
      },
    },
    "web": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
          "react/jsx-runtime",
        ],
        "size": 108000,
      },
    },
  },
  "name": "react-native-gesture-handler",
  "peerDependencies": {},
  "version": "1.6.0",
}
`;

exports[`creates bundle for subpath 1`] = `
{
  "files": {
    "android": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
          "react/jsx-runtime",
        ],
        "size": 36000,
      },
    },
    "ios": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
          "react/jsx-runtime",
        ],
        "size": 33000,
      },
    },
    "web": {
      "bundle.js": {
        "externals": [
          "react",
          "react-native",
          "react/jsx-runtime",
        ],
        "size": 93000,
      },
    },
  },
  "name": "react-native-gesture-handler",
  "peerDependencies": {},
  "version": "1.6.0",
}
`;
